--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   },
   "dependencies": {
     "@react-native-masked-view/masked-view": "^0.2.9",
-    "@react-navigation/native": "^6.1.7",
-    "@react-navigation/stack": "^6.3.17",
+    "@react-navigation/native": "^5.0.9",
+    "@react-navigation/stack": "^5.1.1",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-pose": "^0.9.1",
     "react-native-reanimated": "^3.5.2",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
-    "react-native-svg": "^13.13.0"
+    "react-native-shared-element": "^0.8.8",
+    "react-native-svg": "^13.13.0",
+    "react-navigation-shared-element": "^5.0.0-alpha1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
