--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 {
-  "extends": "@tsconfig/react-native/tsconfig.json"
-  // "compilerOptions": {
-  //   "target": "es6",
-  //   "module": "commonjs",
-  //   "moduleResolution": "node",
-  //   "noResolve": false,
-  //   "noImplicitAny": false,
-  //   "removeComments": true,
-  //   "sourceMap": true,
-  //   "allowJs": true
-  //    "jsx": "react"
-  // }
+  "extends": "@tsconfig/react-native/tsconfig.json",
+  "compilerOptions": {
+    "target": "es6",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "noResolve": false,
+    "noImplicitAny": false,
+    "removeComments": true,
+    "sourceMap": true,
+    "allowJs": true,
+    "jsx": "react"
+  }
 }
